--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Curso Angular</title>
   </head>
   <body>
-    <h1>Olá!</h1>
+    <h1>Olá - Aprendendo a usar o Git!</h1>
   </body>
 </html>
